# IV_final_thesis

./: .gitignore  README.md  dashboard.py  environment.yml  pyproject.toml
ctfem/: __init__.py  common.py  config.py  cvt_circuit.py  dashboard_data.py  defects.py  eqs_solver.py  geometry.py  geometry3d.py  materials.py  obs_types.py  observables.py  skfem_solver.py  solver3d.py  sweep.py  util.py  validate.py  viz.py  viz3d.py
scripts/: mesh_convergence.py  phase1_geometry.py  phase1_geometry3d.py  phase2_validate.py  phase3_baseline.py  phase4_defect3d_view.py  phase4_defects.py  phase5_sweep.py  phase6_interactive3d.py  phase7_cvt.py  phase8_detectability.py  phase8_instrument_sweep.py  phase9_statespace.py
tests/: conftest.py  test_config_materials.py  test_cvt.py  test_cvt_circuit.py  test_dashboard_data.py  test_defects.py  test_geometry.py  test_geometry3d.py  test_skfem_solver.py  test_solver_coax.py  test_surface_conductivity.py
